Fix alignment on the auto-play toggle

--- a/main.css
+++ b/main.css
@@ -100,6 +100,7 @@ input.label:focus {
 
 .toggle {
 	display: flex;
+	align-items: center;
 }
 .toggle > * + * {
 	margin-left: 8px;
